<?xml version="1.0"?>

<!--
Copyright (c) 2022, NVIDIA CORPORATION.  All rights reserved.

NVIDIA CORPORATION and its licensors retain all intellectual property
and proprietary rights in and to this software, related documentation
and any modifications thereto.  Any use, reproduction, disclosure or
distribution of this software and related documentation without an express
license agreement from NVIDIA CORPORATION is strictly prohibited.
-->

<package format="2">
  <name>nvblox_msgs</name>
  <version>0.9.3</version>
  <description>ROS2 messages for Nvblox types</description>

  <maintainer email="holeynikova@nvidia.com">Helen Oleynikova</maintainer>
  <maintainer email="hemals@nvidia.com">Hemal Shah</maintainer> 

  <license>NVIDIA Isaac ROS Software License</license>

  <author>Helen Oleynikova</author>
  <author>Alexander Millane</author>

  <buildtool_depend>catkin</buildtool_depend>


  <depend>geometry_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>std_msgs</depend>



</package>
