<?xml version="1.0"?>

<!--
Copyright (c) 2022, NVIDIA CORPORATION.  All rights reserved.

NVIDIA CORPORATION and its licensors retain all intellectual property
and proprietary rights in and to this software, related documentation
and any modifications thereto.  Any use, reproduction, disclosure or
distribution of this software and related documentation without an express
license agreement from NVIDIA CORPORATION is strictly prohibited.
-->

<package format="2">
  <name>nvblox_ros</name>
  <version>0.9.3</version>
  <description>NVBlox ROS2 interface</description>

  <maintainer email="holeynikova@nvidia.com">Helen Oleynikova</maintainer>
  <maintainer email="hemals@nvidia.com">Hemal Shah</maintainer> 
  <license>NVIDIA Isaac ROS Software License</license>
  <url type="website">https://developer.nvidia.com/isaac-ros-gems/</url>   
  <author>Helen Oleynikova</author>
  <author>Alexander Millane</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>geometry_msgs</depend>
  <depend>nvblox_msgs</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_ros</depend>
  <depend>cv_bridge</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>
