<?xml version="1.0"?>

<package>
  <name>nvblox_rviz_plugin</name>
  <version>0.9.3</version>
  <description>RViz visualization plugin for Nvblox meshes</description>
  
  <maintainer email="holeynikova@nvidia.com">Helen Oleynikova</maintainer>
  <maintainer email="hemals@nvidia.com">Hemal Shah</maintainer> 
  <license>NVIDIA Isaac ROS Software License</license>
  <url type="website">https://developer.nvidia.com/isaac-ros-gems/</url>   
  <author>Helen Oleynikova</author>
  <author>Alexander Millane</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>nvblox_msgs</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>rviz</build_depend>

  <run_depend>pluginlib</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>nvblox_msgs</run_depend>

  <export>
    <rviz plugin="${prefix}/plugins_description.xml"/>
  </export>
</package>
